fixed error label spacing in visual/forms

--- a/src/.vuepress/theme/styles/index.styl
+++ b/src/.vuepress/theme/styles/index.styl
@@ -109,14 +109,6 @@ a:focus, a:hover {
 // Visual / Forms
 
 .forms {
-
-    input[type='email'], input[type='number'], input[type='password'], input[type='search'], input[type='tel'], input[type='text'], input[type='url'], textarea, select {
-    margin-bottom: 0;
-
-    min-width: unset;
-    width: 100%;
-    max-width: 100%;
-    }
 }
 
 
